- PEAR::File and PEAR::File_SWF were removed cause they were unused
- PEAR::Date was updated to 1.4.7
- a bug with P4A_Table and long numbers formatting was fixed
- PEAR::HTML_Template_Flexy and P4A_Template_Engine were dropped
- all templates were converted to PHP templates, gaining performance

1.99.18
- .svn directories are now excluded from the automatic inclusion system
- a bug with p4a.js form2string was fixed (regarding escaped characters) (thanks to Nenad Trupka)
- Croatian traslation was added (thanks to Nenad Trupka)
- some fixes were applied to Croatian formats (thanks to Nenad Trupka)
- PHP closing tag was removed from all translation and format files

1.99.17
- PEAR was updated to 1.5.0
- phpThumb was updated to 1.7.7
- P4A_Table_Rows::disable() is now correctly handled
- P4A_Widget::setDefaultLabel now automatically looks within translations
- a new sample (sample_i18n) was added to show how to localize your applications
- a bug with ajax widgets redesign was solved
- P4A_Table now passes the clicked column name to the interceptor

1.99.16
- masks icons are rendered only if not on handheld
- a bug with P4A_Tab_Pane height was solved
- tinyMCE was dropped due to the bugs with ajax environment
- FCKeditor 2.4.0 was introduced (no support for toolbar customization at the moment)
- P4A_APPLICATION_NAME rules were changes making easier to include P4A from outside
- _upload_path action wa added to the main action dispatcher thus now it's possible to retrieve upload path of p4a_fields from outsite
- the way of calling the FCKeditor file manager connector was changed, now the upload path is not passed anymore
- Scriptaculous was updated to 1.7.0
- Prototype was updated to 1.5.0
- onBlur(), onDblClick(), onFocus(), onMouseDown(), onMouseMove(), onMouseUp(), onSelect() methods were added to P4A_Widget
- a bug on date fields with onchange action was solved

1.99.15
- some more error messages were put in the code