@@ -36,10 +36,10 @@
  * @package p4a
  */
 
-define("P4A_EXTENDED_ERRORS", true);
-define("P4A_AJAX_DEBUG", true);
 define("P4A_LOCALE", 'en_US');
 define("P4A_DSN", 'mysql://root:@localhost/p4a_products_catalogue');
+//define("P4A_EXTENDED_ERRORS", true);
+//define("P4A_AJAX_DEBUG", "/tmp/p4a_ajax_debug.txt");
 
 require_once dirname(__FILE__) . '/../../p4a.php';
 
