@@ -467,9 +467,10 @@
 			print "</ajax-response>";
 
 			if (P4A_AJAX_DEBUG) {
-				$fp = @fopen(P4A_COMPILE_DIR . '/p4a_ajax_debug.txt', 'w');
-				@fwrite($fp, ob_get_contents());
-				@fclose($fp);
+				if (($fp = @fopen(P4A_AJAX_DEBUG, 'w')) !== false) {
+					@fwrite($fp, ob_get_contents());
+					@fclose($fp);
+				}
 			}
 
 			ob_end_flush();
